# dsa-generator

./: .gitignore  README.md  install.sh  start.sh
backend/: .env.example  pyproject.toml  requirements.txt  test_db.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/agents/: __init__.py  coder.py  orchestrator.py  planner.py  prompts.py  writer.py
backend/app/api/: routes.py
backend/app/schemas/: request.py  response.py
backend/app/tools/: __init__.py  validators.py
frontend/: index.html
frontend/src/: main.js
frontend/src/components/: GenerateButton.js  GuideRenderer.js  HistoryView.js  ProgressTracker.js  StylePicker.js  TopicSelector.js
frontend/src/lib/: api.js  markdown.js
frontend/src/styles/: components.css  guide.css  index.css
